Fix: Transparent header on Mobile, Close Icon on Mobile

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -169,6 +169,7 @@ button{
         padding: 3em 1.5em;
         margin: 4em 0;
         min-height: 200px;
+        border-radius: 10px;
     }
 }
 
@@ -180,6 +181,7 @@ button{
     }
     h2{
         margin-top: -0.25em;
+        color: black;
     }
     p:not([class="intro"]){
         margin-top: -0.5em;
@@ -310,7 +312,6 @@ button{
     .section{padding: 2em 0;}
     .main-header{
         padding: 0;
-        background: $blue;
         .container{
             padding: 1em 2em;
         }
@@ -349,7 +350,33 @@ button{
 
             }
         }
+      .nav_open{
+            span{
+                opacity: 1;
+                a{color: white}
+                button{color: white; border-color: white;}    
+        }
 
+        $transition-duration: 0.25s;
+               path.last {
+            transform: rotate(-45deg) translate(0px, 4px);
+            transform-origin: center;
+            transition-duration: $transition-duration;
+            transition-delay: $transition-duration;
+            transition-timing-function: ease-in-out
+            }
+            path.middle {
+            transform: translate(-25px, 0px);
+            transition-duration: $transition-duration;
+            transition-timing-function: ease-out;
+            }
+            path.first {
+            @extend path.last;
+            transform: rotate(45deg) translate(0px, -3px);
+            }
+
+    
+    }
     
     }
     .landing{
@@ -362,6 +389,7 @@ button{
         .col-6{
             padding: 0em;
             margin: 1em 0;
+            border-radius: 5px;
             img{
                 width: 50px;
             }
